# Invisiwind

./: .gitignore  Cargo.toml  Invisiwind.sln  LICENSE  README.md  hide.ahk
.cargo/: config.toml
.github/workflows/: build.yml
Injector/: Injector.cpp  Injector.vcxproj  Injector.vcxproj.filters  Invisiwind.rc  resource.h
Misc/: inno.iss
Payload/: Payload.vcxproj  dllmain.cpp
Unhide/: Unhide.vcxproj  dllmain.cpp
injector/: Cargo.toml  build.rs
injector/src/: cli.rs  gui.rs  injector.rs  main.rs  native.rs
payload/: Cargo.toml
payload/src/: lib.rs
